# colpocap

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  logging_config.py  main.py
app/db/: __init__.py  database.py  models.py
app/dicom/: __init__.py  dicom_builder.py  mwl_server.py  store_client.py  uid.py  worklist_client.py
app/services/: __init__.py  export_service.py  study_service.py
app/ui/: capture_view.py  configuration_view.py  main_window.py  manual_patient_dialog.py  theme.py  workers.py  worklist_view.py
app/video/: __init__.py  capture_manager.py  ffmpeg_locator.py  ffmpeg_manager.py  snapshot_manager.py
assets/: README.md
config/: mwl.sample.json  settings.example.json
scripts/: install_ffmpeg_windows.ps1
tests/: test_cancel_study.py  test_config.py  test_database.py  test_dicom_builder.py  test_dicom_networking.py  test_export_batch.py  test_ffmpeg_locator.py  test_ffmpeg_preview.py  test_folder_export.py  test_manual_patient.py  test_mwl_server.py  test_snapshot_review.py  test_store_batch.py  test_ui_async.py  test_ui_copy.py  test_uid_generation.py
