[project]
name = "colpocap-mvp"
version = "0.1.0"
description = "Desktop capture station for colposcopy, DICOM MWL and PACS"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7,<7",
  "pydicom>=3.0,<4",
  "pynetdicom>=3.0,<4",
  "Pillow>=10.0,<13",
]

[project.optional-dependencies]
test = ["pytest>=8.0,<10"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

